--- a/native/RedExpertNativeLauncher/resources/dialog_java_not_found.glade
+++ b/native/RedExpertNativeLauncher/resources/dialog_java_not_found.glade
@@ -1,11 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.36.0 -->
+<!-- Generated with glade 3.22.1 -->
 <interface>
   <requires lib="gtk+" version="3.0"/>
   <object class="GtkTextBuffer" id="mes_txt"/>
   <object class="GtkDialog" id="dialog_jnf">
     <property name="can_focus">False</property>
+    <property name="icon">../red_expert.png</property>
     <property name="type_hint">dialog</property>
+    <child type="titlebar">
+      <object class="GtkLabel">
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+        <property name="label" translatable="yes">RedExpert launching error</property>
+        <style>
+          <class name="system"/>
+        </style>
+      </object>
+    </child>
     <child internal-child="vbox">
       <object class="GtkBox" id="gtk_box">
         <property name="can_focus">False</property>
@@ -15,6 +26,20 @@
           <object class="GtkButtonBox" id="gtk_button_box">
             <property name="can_focus">False</property>
             <property name="layout_style">end</property>
+            <child>
+              <object class="GtkButton">
+                <property name="label" translatable="yes">Cancel</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+                <signal name="clicked" handler="cancel_button_clicked" swapped="no"/>
+              </object>
+              <packing>
+                <property name="expand">True</property>
+                <property name="fill">True</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
             <child>
               <object class="GtkButton" id="ok_button">
                 <property name="label" translatable="yes">OK</property>
@@ -26,7 +51,7 @@
               <packing>
                 <property name="expand">True</property>
                 <property name="fill">True</property>
-                <property name="position">0</property>
+                <property name="position">1</property>
               </packing>
             </child>
           </object>
@@ -40,6 +65,10 @@
           <object class="GtkTextView">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
+            <property name="margin_left">10</property>
+            <property name="margin_right">10</property>
+            <property name="margin_top">5</property>
+            <property name="margin_bottom">5</property>
             <property name="editable">False</property>
             <property name="buffer">mes_txt</property>
           </object>
@@ -89,23 +118,6 @@
                 <property name="position">1</property>
               </packing>
             </child>
-            <child>
-              <object class="GtkRadioButton" id="rb_cancel">
-                <property name="label" translatable="yes">Сlose the application and download java manually</property>
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">False</property>
-                <property name="halign">start</property>
-                <property name="active">True</property>
-                <property name="draw_indicator">True</property>
-                <property name="group">rb_file</property>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">True</property>
-                <property name="position">2</property>
-              </packing>
-            </child>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -113,13 +125,6 @@
             <property name="position">1</property>
           </packing>
         </child>
-      </object>
-    </child>
-    <child type="titlebar">
-      <object class="GtkLabel">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <property name="label" translatable="yes">Java not found</property>
       </object>
     </child>
   </object>
