--- a/native/RedExpertNativeLauncher/resources/download_dialog.glade
+++ b/native/RedExpertNativeLauncher/resources/download_dialog.glade
@@ -5,8 +5,8 @@
   <object class="GtkDialog" id="download_dialog">
     <property name="can_focus">False</property>
     <property name="modal">True</property>
-    <property name="destroy_with_parent">False</property>
     <property name="type_hint">dialog</property>
+    <signal name="close" handler="close_dialog" swapped="no"/>
     <child type="titlebar">
       <placeholder/>
     </child>
