--- a/native/RedExpertNativeLauncher/resources/dialog_java_not_found.glade
+++ b/native/RedExpertNativeLauncher/resources/dialog_java_not_found.glade
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Generated with glade 3.22.1 -->
 <interface>
-  <requires lib="gtk+" version="3.0"/>
-  <object class="GtkTextBuffer" id="mes_txt"/>
+  <requires lib="gtk+" version="3.22"/>
   <object class="GtkDialog" id="dialog_jnf">
     <property name="can_focus">False</property>
     <property name="icon">../red_expert.png</property>
@@ -20,8 +19,12 @@
     <child internal-child="vbox">
       <object class="GtkBox" id="gtk_box">
         <property name="can_focus">False</property>
+        <property name="margin_left">18</property>
+        <property name="margin_right">18</property>
+        <property name="margin_top">18</property>
+        <property name="margin_bottom">18</property>
         <property name="orientation">vertical</property>
-        <property name="spacing">10</property>
+        <property name="spacing">6</property>
         <child internal-child="action_area">
           <object class="GtkButtonBox" id="gtk_button_box">
             <property name="can_focus">False</property>
@@ -62,15 +65,17 @@
           </packing>
         </child>
         <child>
-          <object class="GtkTextView">
+          <object class="GtkLabel" id="mes_lbl">
             <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="margin_left">10</property>
-            <property name="margin_right">10</property>
-            <property name="margin_top">5</property>
-            <property name="margin_bottom">5</property>
-            <property name="editable">False</property>
-            <property name="buffer">mes_txt</property>
+            <property name="can_focus">False</property>
+            <property name="margin_left">6</property>
+            <property name="margin_right">6</property>
+            <property name="margin_top">6</property>
+            <property name="margin_bottom">6</property>
+            <property name="label" translatable="yes">label</property>
+            <property name="justify">fill</property>
+            <property name="selectable">True</property>
+            <property name="angle">0.050000000000000003</property>
           </object>
           <packing>
             <property name="expand">False</property>
