--- a/native/RedExpertNativeLauncher/resources/dialog_java_not_found.glade
+++ b/native/RedExpertNativeLauncher/resources/dialog_java_not_found.glade
@@ -7,6 +7,7 @@
     <property name="resizable">False</property>
     <property name="icon">../red_expert.png</property>
     <property name="type_hint">dialog</property>
+    <signal name="destroy" handler="destroy_jnf" swapped="no"/>
     <child type="titlebar">
       <object class="GtkLabel">
         <property name="visible">True</property>
