improved translation of messages about the absence of Java

--- a/native/RedExpertNativeLauncher/resources/dialog_java_not_found.glade
+++ b/native/RedExpertNativeLauncher/resources/dialog_java_not_found.glade
@@ -93,7 +93,7 @@
             <property name="spacing">3</property>
             <child>
               <object class="GtkRadioButton" id="rb_file">
-                <property name="label" translatable="yes">Select the path to the jvm manually</property>
+                <property name="label" translatable="yes">Specify the path to jvm manually</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">False</property>
